# cwinner

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  install.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/plans/: 2026-02-20-achievements.md  2026-02-20-cwinner-design.md  2026-02-20-cwinner-implementation.md
examples/: demo.rs  record.rs
sounds/default/: README.md
src/: achievements.rs  audio.rs  celebration.rs  config.rs  daemon_main.rs  event.rs  install.rs  lib.rs  main.rs  renderer.rs  sounds.rs  state.rs  update.rs
src/daemon/: mod.rs  server.rs
src/hooks/templates/: git_post_commit.sh  git_post_push.sh  git_pre_push.sh  post_tool_use.sh  session_end.sh  task_completed.sh
