[package]
name = "cwinner"
version = "0.1.11"
edition = "2024"
rust-version = "1.85.0"
authors = ["timutti"]
description = "Gamification overlay for Claude Code — XP, levels, achievements, and celebrations"
license = "MIT"
repository = "https://github.com/timutti/cwinner"
homepage = "https://github.com/timutti/cwinner"
readme = "README.md"
keywords = ["claude-code", "gamification", "cli", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "cwinner"
path = "src/main.rs"

[lib]
name = "cwinner_lib"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
crossterm = "0.29"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.10"
dirs = "6"
anyhow = "1"
libc = "0.2"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
